JsonNullable validation support (#181)
* JsonNullable Java & Kotlin validation support

* KoraAppProcessor logging components static->local improve performance/memory leak in tests